# mfe

./: Halo_API_参考文档.html  MFE_API_参考文档.html  README.md  config.py  parser.py  pyproject.toml
MFE/: __init__.py  config.py  mfe_config.yaml.example  parser.py  util.py
MFE/components/: exe_info.py  model_config.py  operator.py  query.py
MFE/halo/: util.py
MFE/optimizers/: __init__.py  basic.py  multi_request.py
MFE/schedulers/: rr.py
MFE/scripts/: client.py  test_mfe.py
MFE/serve/: __init__.py  mfe_server.py  server.py
MFE/templates/: adv_reason_3.yaml  multi_step_retrival.yaml  multi_turn.yaml
MFE/workers/: __init__.py  worker_test.py  worker_v.py
components/: operator.py  query.py
data/: openai_gsm8k_main_question.jsonl  questions.json  results.json
docs/: Halo_API_参考文档.md  MFE_API_参考文档.md  components.tex  halo_complete.aux  halo_complete.out  halo_complete.tex  halo_complete.toc  main.tex  optimizers.tex  parser.tex  schedulers.tex  util.tex  workers.tex
halo/: parser.py
halo/components/: __init__.py  model_config.py  operator.py  query.py
halo/optimizers/: __init__.py  mfe_v.py
optimizers/: __init__.py  multi_request.py
schedulers/: __init__.py  rr.py
scripts/: benchmark_compare.py  client.py  download_datasets.py  process_datasets.py  shrink_results.py  test_client.py  test_mfe.py
serve/: __init__.py  mfe_server.py
templates/: adv_reason_3.yaml  adv_reason_4m.yaml  multi_step_retrival.yaml  multi_turn.yaml  multi_voting_4.yaml  multi_voting_4m.yaml  multi_voting_5m.yaml
workers/: worker_test.py  worker_v.py
(+5 files in other folders)
