[project]
name = "halo"
version = "0.1.0"
description = "MFE: multi-flow-execute system for multi-agent workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "agentscope==0.1.6",
    "datasets>=4.0.0",
    "langgraph==0.6.0",
    "matplotlib>=3.10.6",
    "numpy>=1.24.0",
    "pandas>=2.3.2",
    "pyyaml>=6.0",
    "pynvml>=12.0.0",
    "torch>=2.0.0",
    "transformers==4.53.0",
    "vllm==0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["halo", "halo.*"]
